Added new properties to schema
Added difficulty, created, modified and keywords properties to schema.
Split out routes and controller logic into 2 files. Updated swagger
docs and README.md
